[gd_scene load_steps=5 format=3 uid="uid://dsgpj8ebxi8t2"]

[ext_resource type="PackedScene" uid="uid://c1v3ap1bgnkf1" path="res://ui/scoreboard/scoreboard.tscn" id="1_jbgdu"]
[ext_resource type="Script" uid="uid://yaxqm87q1mvp" path="res://ui/pause_menu/pause_menu.gd" id="1_le02u"]
[ext_resource type="Theme" uid="uid://bsgy7q3257cf0" path="res://resources/ui/button_theme.tres" id="1_mnjdh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mnjdh"]
bg_color = Color(0.772627, 0.602132, 0.415254, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_le02u")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.2
anchor_right = 0.75
anchor_bottom = 0.8
offset_left = -0.480011
offset_top = -0.152008
offset_right = -0.343994
offset_bottom = -0.0480347
theme_override_styles/panel = SubResource("StyleBoxFlat_mnjdh")

[node name="Scoreboard" parent="BackgroundPanel" instance=ExtResource("1_jbgdu")]
layout_mode = 1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.45
anchor_bottom = 0.95

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.95
anchor_bottom = 0.9

[node name="ContinueButton" type="Button" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_mnjdh")
text = "Continue"

[node name="RestartButton" type="Button" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_mnjdh")
text = "Restart"

[node name="OptionsButton" type="Button" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_mnjdh")
text = "Options"

[node name="JumpingCourseButton" type="Button" parent="BackgroundPanel/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_mnjdh")
text = "Change jumping course"

[node name="ExitButton" type="Button" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_mnjdh")
text = "Exit to main menu"

[connection signal="pressed" from="BackgroundPanel/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="BackgroundPanel/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="BackgroundPanel/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="BackgroundPanel/VBoxContainer/JumpingCourseButton" to="." method="_on_jumping_course_button_pressed"]
[connection signal="pressed" from="BackgroundPanel/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
